FOS and Bootstrap

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
 </head>
 <body>
-{#{% include 'default/header.html.twig' %}#}
+{% include 'default/header.html.twig' %}
 <div class="container">
     {% block body %}{% endblock %}
 </div>
