--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -6,6 +6,7 @@
     {% block stylesheets %}
         <link href="{{ asset('bootstrap/css/bootstrap.min.css') }}" rel="stylesheet"/>
         <link href="{{ asset('fontawesome/css/font-awesome.css') }}" rel="stylesheet">
+        <link href="{{ asset('css/style.css') }}" rel="stylesheet"/>
     {% endblock %}
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
 </head>
