custom query_builder in formType

--- a/app/Resources/views/category/_form.html.twig
+++ b/app/Resources/views/category/_form.html.twig
@@ -2,7 +2,7 @@
 {{ form_start(form) }}
 
     {{ form_row(form.name) }}
-
+    {#{{ form_widget(form.tasks.vars.prototype) }}#}
     <button type="submit" class="btn btn-success" formnovalidate>Submit</button>
 
 {{ form_end(form) }}
