list, edit, slug

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -15,6 +15,7 @@
 <div class="container">
     {% block body %}{% endblock %}
 </div>
+{% include 'default/footer.html.twig' %}
 
 {% block javascripts %}
     <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
