--- a/app/Resources/views/category/list.html.twig
+++ b/app/Resources/views/category/list.html.twig
@@ -6,10 +6,10 @@
         <tr>
             <th>Kategorie:</th>
         </tr>
-        {% for category in user.categories %}
+        {% for category in app.user.categories %}
             {#{{ dump(loop) }}#}
             <tr>
-                <td>{{ category.name }}</td>
+                <td><a href="{{ path('category_edit', {slug: category.slug}) }}">{{ category.name }}</a></td>
             </tr>
         {% endfor %}
     </table>
