--- a/app/Resources/views/task/_form.html.twig
+++ b/app/Resources/views/task/_form.html.twig
@@ -8,6 +8,6 @@
     {{ form_row(form.category) }}
 
 
-    <button type="submit" class="btn btn-success" formnovalidate>Submit</button>
+    <button type="submit" class="btn btn-success" formnovalidate>Zapisz</button>
 
 {{ form_end(form) }}
