--- a/app/Resources/views/category/_form.html.twig
+++ b/app/Resources/views/category/_form.html.twig
@@ -3,6 +3,6 @@
 
     {{ form_row(form.name) }}
     {#{{ form_widget(form.tasks.vars.prototype) }}#}
-    <button type="submit" class="btn btn-success" formnovalidate>Submit</button>
+    <button type="submit" class="btn btn-success" formnovalidate>Zapisz</button>
 
 {{ form_end(form) }}
