--- a/app/Resources/views/default/footer.html.twig
+++ b/app/Resources/views/default/footer.html.twig
@@ -1,5 +1,5 @@
 
 <div class="container text-center">
     <hr/>
-    <div>© TaskPlanner {{ 'now'|date('Y') }}</div>
+    <div>© {{ webSiteName }} {{ 'now'|date('Y') }}</div>
 </div>
