--- a/app/Resources/views/default/header.html.twig
+++ b/app/Resources/views/default/header.html.twig
@@ -3,7 +3,7 @@
         <div class="navbar-header">
             <div class="container text-center">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="{{ path('homepage') }}">Strona główna</a>
+                    <a class="navbar-brand" href="{{ path('homepage') }}">{{ webSiteName }}</a>
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav">
@@ -28,7 +28,7 @@
         <div class="navbar-header">
             <div class="container text-center">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="{{ path('homepage') }}">Strona główna</a>
+                    <a class="navbar-brand" href="{{ path('homepage') }}">{{ webSiteName }}</a>
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav">
