--- a/app/Resources/views/category/list.html.twig
+++ b/app/Resources/views/category/list.html.twig
@@ -2,14 +2,21 @@
 
 {% block body %}
 
-    <table class="table table-striped">
+    <table class="table">
         <tr>
             <th>Kategorie:</th>
+            <th>Akcja</th>
         </tr>
         {% for category in app.user.categories %}
             {#{{ dump(loop) }}#}
-            <tr>
+            <tr id="category">
                 <td><a href="{{ path('category_edit', {slug: category.slug}) }}">{{ category.name }}</a></td>
+                <td><a href="{{ path('category_delete', {id: category.id}) }}"
+                       class="btn btn-danger js-category-delete">Usuń</a></td>
+            </tr>
+        {% else %}
+            <tr>
+                <td>Nie masz żadnych kategorii</td>
             </tr>
         {% endfor %}
     </table>
