comments and voters

--- a/app/Resources/views/task/list.html.twig
+++ b/app/Resources/views/task/list.html.twig
@@ -5,9 +5,9 @@
     <table class="table">
         <thead>
         <tr>
-            <th>Tytuł zadania:</th>
-            <th>Opis:</th>
-            <th>Kategoria:</th>
+            <th>Tytuł zadania</th>
+            <th>Opis</th>
+            <th>Kategoria</th>
             <th>Wykonane?</th>
             <th>Data edycji</th>
             <th>Data utworzenia</th>
