--- a/app/Resources/views/task/show.html.twig
+++ b/app/Resources/views/task/show.html.twig
@@ -15,6 +15,34 @@
         <h3>Data utworzenia - {{ task.createdAt|date('Y-m-d H:i:s') }}</h3>
         <a href="{{ path('task_edit', {slug: task.slug}) }}" class="btn btn-warning">Edytuj zadanie</a>
     </div>
+    <hr/>
+    {{ include('comment/_form.html.twig') }}
+    <hr/>
+    <table class="table">
+        <thead>
+        <tr>
+            <th>Komentarz</th>
+            <th>Data edycji</th>
+            <th>Data utworzenia</th>
+            <th>Akcja</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for comment in task.comments %}
+        <tr id="comment">
+            <td><a href="{{ path('comment_edit', {id: comment.id}) }}">{{ comment.text }}</a></td>
+            <td>{{ comment.updatedAt|date('Y-m-d H:i:s') }}</td>
+            <td>{{ comment.createdAt|date('Y-m-d H:i:s') }}</td>
+            <td><a href="{{ path('comment_delete', {id: comment.id}) }}" class="btn btn-danger js-comment-delete">Usuń</a></td>
+        </tr>
+        {% endfor %}
+        </tbody>
+        <tfoot>
+        <tr>
+            <td colspan="4">Łączna liczba komentarzy: {{ task.comments|length }}</td>
+        </tr>
+        </tfoot>
+    </table>
 
 {% endblock %}
 
